Fix: dependencies and travis (#5)
* Fix dependencies (remove Grunt, update Maven dependencies), fix Travis build

* Extend JDK versions to all available on Travis

* Fix integration tests
- Updated to a recent version of Wildfly (15.0.1.Final)
- Works out-of-the-box with `mvn verify`
- All dependencies like node, npm, bower are used as specified in pom.xml
- Run `npm install` in js-cookie (installed via bower) to use qunit.js and qunit.css in IT

* JDK6 and JDK7 fail on Travis, require JDK8

* Remove configuration for missing test

* Update CONTRIBUTING guidelines, remove grunt, update Tools

Co-authored-by: Thomas Lutz <lutz@symptoma.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
 language: java
 
 jdk:
+  <<<<<<< fix/dependencies-and-travis
+  - oraclejdk8
+  - oraclejdk9
+  - oraclejdk11
+  - openjdk8
+  - openjdk10
+  - openjdk11
+  =======
   - oraclejdk11
   - oraclejdk12
   - oraclejdk13
@@ -13,3 +21,5 @@ jdk:
   - openjdk13
   - openjdk14
   
+  >>>>>>> fix/issue-14-decoding-two-encoded-chars
+ 
