--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,11 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <selenium.version>3.141.59</selenium.version>
+  <<<<<<< fix/dependencies-and-travis
+    <wildfly.version>15.0.1.Final</wildfly.version>
+  =======
     <wildfly.version>20.0.1.Final</wildfly.version>
+  >>>>>>> fix/issue-14-decoding-two-encoded-chars
     <project.scm.id>java-cookie-scm</project.scm.id>
     <java.version>1.8</java.version>
   </properties>
@@ -70,8 +74,13 @@
       <dependency>
         <groupId>org.jboss.arquillian</groupId>
         <artifactId>arquillian-bom</artifactId>
+  <<<<<<< fix/dependencies-and-travis
+        <version>1.4.1.Final</version>
+        <scope>import</scope>
+  =======
         <version>1.6.0.Final</version>
         <scope>test</scope>
+  >>>>>>> fix/issue-14-decoding-two-encoded-chars
         <type>pom</type>
       </dependency>
     </dependencies>
@@ -86,12 +95,20 @@
     <dependency>
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
+  <<<<<<< fix/dependencies-and-travis
+      <version>2.10.1</version>
+  =======
       <version>2.10.12</version>
+  >>>>>>> fix/issue-14-decoding-two-encoded-chars
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
+  <<<<<<< fix/dependencies-and-travis
+      <version>2.9.8</version>
+  =======
       <version>2.13.0</version>
+  >>>>>>> fix/issue-14-decoding-two-encoded-chars
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -120,43 +137,71 @@
     <dependency>
       <groupId>org.jboss.arquillian.protocol</groupId>
       <artifactId>arquillian-protocol-servlet</artifactId>
+  <<<<<<< fix/dependencies-and-travis
+      <version>1.4.1.Final</version>
+  =======
       <version>1.6.0.Final</version>
+  >>>>>>> fix/issue-14-decoding-two-encoded-chars
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.jboss.arquillian.junit</groupId>
       <artifactId>arquillian-junit-container</artifactId>
+  <<<<<<< fix/dependencies-and-travis
+      <version>1.4.1.Final</version>
+  =======
       <version>1.6.0.Final</version>
+  >>>>>>> fix/issue-14-decoding-two-encoded-chars
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.wildfly.arquillian</groupId>
       <artifactId>wildfly-arquillian-container-managed</artifactId>
+  <<<<<<< fix/dependencies-and-travis
+      <version>2.1.1.Final</version>
+  =======
       <version>2.2.0.Final</version>
+  >>>>>>> fix/issue-14-decoding-two-encoded-chars
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.jboss.shrinkwrap.resolver</groupId>
       <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
+  <<<<<<< fix/dependencies-and-travis
+      <version>3.1.3</version>
+  =======
       <version>3.1.4</version>
+  >>>>>>> fix/issue-14-decoding-two-encoded-chars
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.jboss.shrinkwrap.resolver</groupId>
       <artifactId>shrinkwrap-resolver-spi</artifactId>
+  <<<<<<< fix/dependencies-and-travis
+      <version>3.1.3</version>
+  =======
       <version>3.1.4</version>
+  >>>>>>> fix/issue-14-decoding-two-encoded-chars
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
+  <<<<<<< fix/dependencies-and-travis
+      <version>4.5.7</version>
+  =======
       <version>4.5.13</version>
+  >>>>>>> fix/issue-14-decoding-two-encoded-chars
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>fluent-hc</artifactId>
+  <<<<<<< fix/dependencies-and-travis
+      <version>4.5.7</version>
+  =======
       <version>4.5.13</version>
+  >>>>>>> fix/issue-14-decoding-two-encoded-chars
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -208,7 +253,11 @@
           <plugin>
             <groupId>com.github.eirslett</groupId>
             <artifactId>frontend-maven-plugin</artifactId>
+  <<<<<<< fix/dependencies-and-travis
+            <version>1.5</version>
+  =======
             <version>1.11.2</version>
+  >>>>>>> fix/issue-14-decoding-two-encoded-chars
             <executions>
               <execution>
                 <id>install node and npm</id>
@@ -216,7 +265,12 @@
                   <goal>install-node-and-npm</goal>
                 </goals>
                 <configuration>
+  <<<<<<< fix/dependencies-and-travis
+                  <nodeVersion>v11.10.0</nodeVersion>
+                  <npmVersion>6.8.0</npmVersion>
+  =======
                   <nodeVersion>v15.6.0</nodeVersion>
+  >>>>>>> fix/issue-14-decoding-two-encoded-chars
                 </configuration>
               </execution>
               <execution>
@@ -262,7 +316,11 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
+  <<<<<<< fix/dependencies-and-travis
+            <version>3.0.1</version>
+  =======
             <version>3.2.0</version>
+  >>>>>>> fix/issue-14-decoding-two-encoded-chars
             <executions>
               <execution>
                 <id>attach-javadocs</id>
@@ -275,7 +333,11 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-source-plugin</artifactId>
+  <<<<<<< fix/dependencies-and-travis
+            <version>3.0.1</version>
+  =======
             <version>3.2.1</version>
+  >>>>>>> fix/issue-14-decoding-two-encoded-chars
             <executions>
               <execution>
                 <id>attach-sources</id>
