--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
 language: java
 
 jdk:
+  <<<<<<< fix/dependencies-and-travis
+  - oraclejdk8
+  - oraclejdk9
+  - oraclejdk11
+  - openjdk8
+  - openjdk10
+  - openjdk11
+  =======
   - oraclejdk11
   - oraclejdk12
   - oraclejdk13
@@ -12,3 +20,6 @@ jdk:
   - openjdk12
   - openjdk13
   - openjdk14
+  
+  >>>>>>> fix/issue-14-decoding-two-encoded-chars
+ 
