--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "url": "https://github.com/js-cookie/java-cookie.git"
   },
   "devDependencies": {
+  <<<<<<< fix/dependencies-and-travis
     "bower": "1.8.8"
+  =======
+    "bower": "1.8.12"
+  >>>>>>> fix/issue-14-decoding-two-encoded-chars
   },
   "scripts": {
     "test": "cd bower_components/js-cookie && ../../node/node \"../../node/node_modules/npm/bin/npm-cli.js\" install"
   }
 }
+ 
