Fix: decoding two encoded chars (#7)
* Update Maven/NPM depdendencies, remove Grunt (not necessary)

* Add failing test

* Fix decoding by doing two rounds: first 3-byte-chars, then 1-byte-chars

* Fix Java JDK versions for Travis

* Remove project Eclipse files and ignore them

* Fix scope of JBOSS dependency

Co-authored-by: Thomas Lutz <lutz@symptoma.com>

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@
 /release.properties
 /pom.xml.releaseBackup
 *.iml
+  <<<<<<< fix/decoding-two-encoded-chars
+.idea
+.project
+.classpath
+.settings
+  =======
   <<<<<<< fix/dependencies-and-travis
 .idea
   =======
@@ -14,3 +20,5 @@
 .classpath
 .project
   >>>>>>> fix/issue-14-decoding-two-encoded-chars
+  >>>>>>> main
+ 
