--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: java
 
 jdk:
+  <<<<<<< fix/decoding-two-encoded-chars
+  - oraclejdk8
+  - oraclejdk11
+  - openjdk10
+  - openjdk11
+  =======
   <<<<<<< fix/dependencies-and-travis
   - oraclejdk8
   - oraclejdk9
@@ -22,4 +28,6 @@ jdk:
   - openjdk14
   
   >>>>>>> fix/issue-14-decoding-two-encoded-chars
+ 
+  >>>>>>> main
  
