--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "url": "https://github.com/js-cookie/java-cookie.git"
   },
   "devDependencies": {
+  <<<<<<< fix/decoding-two-encoded-chars
+    "bower": "1.8.8"
+  =======
   <<<<<<< fix/dependencies-and-travis
     "bower": "1.8.8"
   =======
@@ -15,6 +18,7 @@
   },
   "scripts": {
     "test": "cd bower_components/js-cookie && ../../node/node \"../../node/node_modules/npm/bin/npm-cli.js\" install"
+  >>>>>>> main
   }
 }
  
